Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97808

QOperatingSystemVersion: Adding new const entries in patch releases breaks our BC guarantees

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.3.0
    • 5.15, 6.2, 6.3
    • Core: Other
    • None
    • All
    • 3446313c7a5cd6005089866a7b20c9f28e132a0a

      Each static const entry emits a new symbol. This goes against our BC guarantees for patch versions where we promise that users can freely downgrade the Qt libraries without any recompilation as long as it's inside the same minor version.

      This means we can only effectively add new static const entries to QOperatingSystemVersion in minor releases.

      For Qt 7 the class should be redesigned so that it can have all the entries be inline, and not have them emit symbols.

        For Gerrit Dashboard: QTBUG-97808
        # Subject Branch Project Status CR V

            manordheim Mårten Nordheim
            manordheim Mårten Nordheim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes